# sudokulib

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/sudokulib/: __init__.py  solver.py
tests/: test_solver.py
