[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sudokulib"
version = "0.1.0"
description = "Sudoku solving library using integer linear programming"
requires-python = ">=3.11"
dependencies = [
    "pulp>=3.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src/sudokulib"]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
